# CDLL_PythonWrapper

./: README.md
swig/example_Class/: CMakeLists.txt  swig_example_Class.cpp  swig_example_Class.h  swig_example_Class.i
swig/example_Structure/: CMakeLists.txt  swig_example_Structure.cpp  swig_example_Structure.h  swig_example_Structure.i  swig_example_Structure_PyInterface.py
swig/example_Vector/: CMakeLists.txt  swig_example_Vector.cpp  swig_example_Vector.h  swig_example_Vector.i
swig/example_pInt/: CMakeLists.txt  swig_example_pInt.cpp  swig_example_pInt.h  swig_example_pInt.i  swig_example_pInt_PyInterface.py
